--- a/src/style.css
+++ b/src/style.css
@@ -49,7 +49,7 @@ color: #D9D9D9;
 .c1{
     position: relative;
     background-size: cover;
-    background-image: url(/images/Tcket\ D.png);
+    background-image: url("../images/TcketD.png");
     height: 170px;
     width: 100%;
 }
@@ -98,13 +98,13 @@ color: #D9D9D9;
     text-transform: capitalize;
 }
 .c2{
-    background-image: url(/images/Tcket\ D.png);
+    background-image: url(../images/Tcket\ D.png);
     height: 170px;
     width: 300%;
     
 }
 .image1{
-    background-image: url(/images/Frame\ 8.png);
+    background-image: url(../images/Frame\ 8.png);
     width: 70%;
     height: 156px;
     
@@ -193,7 +193,7 @@ td{
 .checkout-i{
    width: 100%;
    height: 170px;
-   background-image: url(/images/Tcket\ D.png);
+   background-image: url(../images/Tcket\ D.png);
    background-size: cover;
    
     
@@ -340,5 +340,5 @@ td{
 
 .bg-image{
     max-width: 360px;
-    background-image: url(/images/bg-image.svg);
+    background-image: url(../images/bg-image.svg);
 }
